chatbot integration updated

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,7 +40,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     (function (d, m) {
       var kommunicateSettings =
         { "appId": "2f12877b0317a94aed3a1627ed99c2729", "popupWidget": true, "automaticChatOpenOnNavigation": true };
@@ -50,8 +50,18 @@
       window.kommunicate = m; m._globals = kommunicateSettings;
     })(document, window.kommunicate || {});
     /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+  </script> -->
+  <script type="text/javascript">
+    (function (d, m) {
+      var kommunicateSettings =
+        { "appId": "90c0fe4822d1f395be3fb4054d4f702d", "popupWidget": true, "automaticChatOpenOnNavigation": true };
+      var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+      s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+      var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+      window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+    /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
   </script>
-
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
