index file updated

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
 
 </head>
-
+<!-- hello -->
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
